style.css
/*
Theme Name: Frontenberg
Theme URI: https://tomjn.com
Author: Tom J Nowell
Author URI: https://tomjn.com/
Description: Creates a site with a Gutenberg editor instance on the frontend
Version: 1.1
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.
*/

.notice.notice-alt.notice-error.is-dismissible {
    display: none;
}

#adminmenuwrap {
    z-index: 1000; /* +1 */
}
#wpadminbar {
    z-index: 999 !important;
}

/* Red color */
#adminmenu li a:focus div.wp-menu-image:before, #adminmenu li.opensub div.wp-menu-image:before, #adminmenu li:hover div.wp-menu-image:before,
#adminmenu .wp-submenu a:focus, #adminmenu .wp-submenu a:hover, #adminmenu a:hover, #adminmenu li.menu-top>a:focus,
#wpadminbar .ab-top-menu>li.hover>.ab-item, #wpadminbar.nojq .quicklinks .ab-top-menu>li>.ab-item:focus, #wpadminbar:not(.mobile) .ab-top-menu>li:hover>.ab-item, #wpadminbar:not(.mobile) .ab-top-menu>li>.ab-item:focus {
    color: #fb6874;
}

.stackable-logo {
    width: 50px;
    margin-top: 2px; 
    margin: 0 auto; 
    display: block;
}
.stackable-welcome {
    padding: 15px; 
    color: #fff; 
    font-size: 15px; 
    line-height: 1.4em;
    text-align: center;
    font-weight: bold;
}
.stackable-note {
    padding: 15px;
    color: #eee;
}

.menu-item-container .dashicons-before:before {
    content: "\f116";
}
.menu-item-blog-posts .dashicons-before:before {
    content: "\f509";
}
.menu-item-feature .dashicons-before:before {
    content: "\f226";
}
.menu-item-accordion .dashicons-before:before {
    content: "\f164";
}
.menu-item-image-box .dashicons-before:before {
    content: "\f232";
}
.menu-item-feature-grid .dashicons-before:before {
    content: "\f180";
}
.menu-item-icon-list .dashicons-before:before {
    content: "\f203";
}
.menu-item-cta .dashicons-before:before {
    content: "\f339";
}
.menu-item-card .dashicons-before:before {
    content: "\f175";
}
.menu-item-header .dashicons-before:before {
    content: "\f535";
}
.menu-item-count-up .dashicons-before:before {
    content: "\f238";
}
.menu-item-video-popup .dashicons-before:before {
    content: "\f236";
}
.menu-item-pricing-box .dashicons-before:before {
    content: "\f524";
}
.menu-item-testimonial .dashicons-before:before {
    content: "\f130";
}
.menu-item-team-member .dashicons-before:before {
    content: "\f307";
}
.menu-item-notification .dashicons-before:before {
    content: "\f348";
}
.menu-item-number-box .dashicons-before:before {
    content: "\f180";
}
.menu-item-expand .dashicons-before:before {
    content: "\f347";
}
.menu-item-button .dashicons-before:before {
    content: "\f310";
}
.menu-item-blockquote .dashicons-before:before {
    content: "\f122";
}

/* Main column width */
.edit-post-visual-editor.edit-post-visual-editor .editor-post-title__block,
.edit-post-visual-editor.edit-post-visual-editor .editor-default-block-appender,
.edit-post-visual-editor.edit-post-visual-editor .editor-block-list__block {
    max-width: 900px;
}

/* Main column width */
.wp-block {
    max-width: 900px;
}

/* Editor styles */
.editor-block-list__block, .editor-block-list__block p {
    color: #7a7c84;
	font-family: Lato, sans-serif !important;
}
.edit-post-visual-editor .editor-post-title__block .editor-post-title__input,
.edit-post-visual-editor .editor-block-list__block h1,
.edit-post-visual-editor .editor-block-list__block h2,
.edit-post-visual-editor .editor-block-list__block h3,
.edit-post-visual-editor .editor-block-list__block h4,
.edit-post-visual-editor .editor-block-list__block h5,
.edit-post-visual-editor .editor-block-list__block h6 {
    color: #2c313f;
    font-family: Poppins, sans-serif;
    font-weight: bold;
}
.edit-post-visual-editor .editor-post-title__block .editor-post-title__input,
.edit-post-visual-editor .editor-block-list__block h1 {
    font-size: 49px;
    font-size: 3.0625rem;
    line-height: 1.2245;
}
.edit-post-visual-editor .editor-block-list__block h2 {
    font-size: 40px;
    font-size: 2.5rem;
    line-height: 1.125;
}
.edit-post-visual-editor .editor-block-list__block h3 {
    font-size: 32px;
    font-size: 2rem;
    line-height: 1.1719;
}
.edit-post-visual-editor .editor-block-list__block h4 {
    font-size: 25px;
    font-size: 1.5625rem;
    line-height: 1.2;
}
.edit-post-visual-editor .editor-block-list__block h5 {
    font-size: 20px;
    font-size: 1.25rem;
    line-height: 1.5;
}
.edit-post-visual-editor .editor-block-list__block h6 {
    font-size: 16px;
    font-size: 1rem;
    line-height: 1.40625;
}

.edit-post-visual-editor .editor-block-list__block[data-align=full] {
    max-width: none !important;
}
.edit-post-visual-editor .editor-block-list__block[data-align=wide] {
    max-width: 1100px !important;
}

:root {
    --s-header-bg-color: #fb6874;
    --s-header-menu-text-color: #ffffff;
    --s-header-menu-text-hover-color: #a73a43;
    --s-primary-color: #ab5af1;
}

.stackable-intro-bg {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: rgba(0,0,0,.8);
    z-index: 1002;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}
.stackable-intro-bg.hide {
    pointer-events: none;
    opacity: 0;
    z-index: -100;
}
.stackable-intro-wrapper {
    width: 85%;
    max-width: 600px;
    min-height: 300px;
    background: linear-gradient(to right, #ab5af1, #fb6874);
    margin: 35px;
    padding: 35px;
    border-radius: 8px;
    text-align: center;
    color: #fff;
    position: relative;
}
.stackable-intro-wrapper p {
    font-size: 16px;
    max-width: 380px;
    margin: 0 auto 1em;
}
.stackable-intro-wrapper h3 {
    color: #fff;
    font-size: 2em;
    line-height: 1.2em;
}
.stackable-intro-bg .stackable-logo {
    width: 100px;
    height: auto;
}
.stackable-intro-close {
    position: absolute;
    top: 20px;
    right: 20px;
    height: 25px;
    width: 25px;
    display: block;
}

